# podo-me433

./: README.md
hw11/: final_processing_test.py  find_edges.py  get_image_pil.py  processing.py
hw12/: CMakeLists.txt
hw12/src/: hw12.c
hw14/: README.md  hw14.py  python_csv.py
hw15/: camera_mount.SLDPRT  motor_mount.SLDPRT  popsicle_mount.SLDPRT  wheel.SLDPRT  ~$popsicle_mount.SLDPRT
hw16/: CMakeLists.txt
hw16/src/: hw16.c
hw2-2/: CMakeLists.txt
hw2/src/: blink.c
hw3/: CMakeLists.txt
hw3/src/: hw3.c
hw4/: CMakeLists.txt
hw4/src/: hw4.c
hw4_retry/: CMakeLists.txt
hw4_retry/src/: hw4.c
hw5/: CMakeLists.txt
hw5/src/: hw5.c
hw6/: CMakeLists.txt
hw6/src/: hw6.c
hw7/: CMakeLists.txt
hw7/src/: hw7.c
hw9/: CMakeLists.txt
hw9/src/: hw9.c
